# agent-hub

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.agents/skills/code-and-review/: SKILL.md
.github/workflows/: release.yml
assets/: app-icon.icns
src/: app_assets.rs  diff_view.rs  main.rs  theme.rs
src/codex/: app_server.rs  mod.rs  thread_item.rs  workspace.rs
src/components/: branch_diff_panel.rs  composer_panel.rs  mod.rs  pending_approval_panel.rs  thread_cards.rs  thread_timeline_panel.rs
src/sidebar/: footer.rs  group.rs  header.rs  menu.rs  mod.rs
