[package]
name = "agent-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
core-text = "=21.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-channel = "2.5.0"
futures-channel = "0.3.31"
