[package]
name = "agent-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", branch = "main" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-channel = "2.5.0"
futures-channel = "0.3.31"
catppuccin = "2.6.0"
anyhow = "1.0.101"
rust-embed = "8.11.0"
