[package]
name = "agent-hub"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jk-gan/agent-hub"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", branch = "main" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-channel = "2.5.0"
futures-channel = "0.3.31"
catppuccin = "2.6.0"
anyhow = "1.0.101"
rust-embed = "8.11.0"
imagesize = "0.13.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
name = "Agent Hub"
product-name = "Agent Hub"
identifier = "com.jk-gan.agent-hub"
authors = ["Jun Kai Gan"]
description = "Agent Hub - An AI coding assistant platform"
resources = ["Cargo.toml", "src", "assets"]
icons = ["assets/app-icon.icns"]
formats = ["app", "dmg"]
